# Style

./: README.md  main.py  pyproject.toml
.github/workflows/: deploy.yml
Backend/: Dockerfile  main.py  pyproject.toml  seed_database.py  testdb.py
Backend/.github/workflows/: deploy.yml
Style/Style/: APIService.swift  AuthView.swift  ContentView.swift  Coupon.swift  DashBoardView.swift  FeedView.swift  MainView.swift  ProfileView.swift  StyleApp.swift  TradeView.swift  UserSession.swift
Style/Style.xcodeproj/: project.pbxproj
Style/Style.xcodeproj/project.xcworkspace/xcuserdata/angelinali.xcuserdatad/: UserInterfaceState.xcuserstate
Style/Style.xcodeproj/project.xcworkspace/xcuserdata/keimanchan.xcuserdatad/: UserInterfaceState.xcuserstate
Style/Style.xcodeproj/project.xcworkspace/xcuserdata/stevensu.xcuserdatad/: UserInterfaceState.xcuserstate
Style/Style/Assets.xcassets/aerie.imageset/: Contents.json
Style/Style/Assets.xcassets/jane_avatar.imageset/: Contents.json
Style/Style/Assets.xcassets/ralph.imageset/: Contents.json
Style/Style/Models/: Deal.swift
Style/StyleTests/: StyleTests.swift
Style/StyleUITests/: StyleUITests.swift  StyleUITestsLaunchTests.swift
