[tool.poetry]
name = "voguevault"
version = "0.1.0"
description = ""
authors = ["stevensusas <hanqisu@sas.upenn.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.5"
uvicorn = "^0.32.1"
pymongo = {extras = ["srv"], version = "^4.10.1"}
pydantic = "^2.10.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
